# Termin

./: .gitignore  README.md  package.json  uno.config.js  vite.config.js
.github/workflows/: release.yml
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  schedule.rs
migration/src/: m20220101_000001_create_table.rs
src/: App.vue  Provider.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  errors.rs  main.rs  notify.rs  setup.rs  state.rs  tray.rs
src-tauri/src/commands/: schedule.rs
src-tauri/src/database/: schedule.rs
src/router/: index.js
src/views/: Config.vue  Schedule.vue
