[package]
name = "Termin"
version = "0.1.0"
description = "Termin"
authors = ["uhobnil"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
# name = "tauri_app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.1.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono" ] }
chrono = "0.4.38"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
thiserror="2.0.6"
anyhow="1.0.94"
tokio = { version = "1.0", features = ["sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
